--- a/nixpack.yml
+++ b/nixpack.yml
@@ -7,4 +7,4 @@ environment:
   TOKEN: 5904394121:AAH7nygF6KE_zFsmz0Ac1EAhefSUwHMg7-8
 
 commands:
-  start: python3 main.py
+  start: python3 bot.py
